# ai-gateway

./: .bianbu-ci.yml  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-runtime.txt
configs/: base.yaml  dev.yaml
configs/vision/: bytetrack.yaml  emotion.yaml  ocsort.yaml  resnet50.yaml  yolov11m.yaml  yolov11n.yaml  yolov11s.yaml  yolov5_gesture.yaml  yolov8m-pose.yaml  yolov8m-seg.yaml  yolov8m.yaml  yolov8n-pose.yaml  yolov8n-seg.yaml  yolov8n.yaml  yolov8s-pose.yaml  yolov8s-seg.yaml  yolov8s.yaml
debian/: README.Debian  bianbu.conf  changelog  control  copyright  rules  spacemit-ai-gateway.install  spacemit-ai-gateway.postinst  spacemit-ai-gateway.postrm  spacemit-ai-gateway.service  spacemit-ai-gateway.spacemit-ai-gateway-frontend.service
frontend/: index.html  landing-hero.js  landing.css  serve.py
frontend/console/: index.html
frontend/console/src/: ASRTryPage.jsx  App.jsx  ConfigPage.jsx  DashboardPages.jsx  Icon.jsx  LLMManagePage.jsx  (+21 more)
schema/: llm.json  popular.json  speech.json  vision.json  vlm.json
scripts/embed/: clean.sh  test_ui.html
scripts/llm/: clean.sh  test_ui.html
scripts/rerank/: clean.sh  test_ui.html
src/spacemit_ai_gateway/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_http_routes.py
tests/unit/: test_asr_service.py  test_audio_codec.py  test_base_model_service.py  test_embed_service.py  test_llm_service.py  test_model_download.py  test_rerank_service.py  test_runtime_requirements.py  test_tts_service.py  test_vad_service.py  test_vision_service.py  test_vision_stream.py  test_vlm_service.py
tests/ws/: test_ws_smoke.py
(+114 files in other folders)
