[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacemit-ai-gateway"
version = "0.1.4"
description = "SpacemiT AI Gateway - ASR/TTS/VAD HTTP API"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SpacemiT", email = "dev@spacemit.com"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.26",

    # model_zoo wheels; OpenCV itself is provided by the system opencv-spacemit package.
    "spacemit-asr>=1.0.0",
    "spacemit-tts>=1.0.0",
    "spacemit-vad>=1.0.0",
    "spacemit-vision>=0.1.0",
    "numpy>=2.2.6",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "websockets>=12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
spacemit-ai-gateway = "spacemit_ai_gateway.app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spacemit_ai_gateway = [
    "py.typed",
    "configs/*.yaml",
    "configs/vision/*.yaml",
    "domains/vision/assets/labels/*.txt",
]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "websockets>=12.0",
]
